# context

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .npmrc  .pnpmrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  build-benchmark.json  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-milvus-connection.cjs  test-milvus-connection.ts  tsconfig.json
commands/: seeway-clear.md  seeway-index.md  seeway-search.md  seeway-status.md
docs/: README.md  claude-context-record.md  mechanism.md  prd.md  use_guide.md
evaluation/: README.md  analyze_and_plot_mcp_efficiency.py  client.py  generate_subset_json.py  pyproject.toml  run_evaluation.py
evaluation/case_study/: README.md
evaluation/case_study/django_14170/: README.md  both_result.json  grep_result.json
evaluation/case_study/pydata_xarray_6938/: README.md  both_result.json  grep_result.json
evaluation/retrieval/: base.py  custom.py
evaluation/servers/: edit_server.py  grep_server.py  read_server.py
evaluation/utils/: constant.py  file_management.py  format.py  llm_factory.py
examples/: README.md
python/: README.md  test_context.ts  test_endtoend.py  ts_executor.py
rules/: code-context-policy.md
scripts/: build-benchmark.js
待执行的项目效果/: README.md  run-all.sh  test-01-graph-engine-offline.ts  test-02-mcp-full-integration.ts  test-03-token-efficiency.ts  test-04-multi-repo-isolation.ts  test-05-code-quality.ts  test-06-incremental-index.ts  测试报告.md
真实测试文件夹/: bug-arrow-type-extension.md  bug-deadlock-temp-memory.md  bug-force-install-parser.md  bug-volatile-dedup.md  (+4 more)
(+80 files in other folders)
