[project]
name = "evaluation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.4",
    "mcp>=1.12.4",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.3.29",
    "langchain-ollama>=0.3.6",
    "datasets>=4.0.0",
    "gitpython>=3.1.45",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "pandas>=2.3.1",
    "numpy>=2.2.6",
    "plotly>=6.3.0",
    "kaleido>=1.0.0",
]
